[project]
name = "xshark"
version = "0.0.1"
description = "Driver/CLI Linux para a tela TFT do teclado Attack Shark X85 Pro"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["hid>=1.0.5", "pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
xshark = "xshark.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xshark*"]
